And remove the last 1.5isms
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2523 961051c9-f516-0410-bf72-c9f7e237a7b7